# raylib-soulslike

./: .gitignore  CMakeLists.txt  README.md
resources/castle-entrance/: castle-entrance-map.json  castle-entrance-tileset.json
source/: main.c
source/controls/: input.c  input.h
source/datastructures/: hashmap.c  hashmap.h
source/entities/: cell.c  cell.h  player.c  player.h
source/graphics/: animation.c  animation.h  draw.c  draw.h  level.c  level.h  tilemap.c  tilemap.h
source/physics/: body.c  body.h  incline.c  incline.h
